// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Dd checkGrammar 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkGrammar 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkGrammar 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkGrammar 4`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkHighlight 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkHighlight 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkHighlight 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkHighlight 4`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkSpaces 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkSpaces 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkSpaces 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkSpaces 4`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd className 1`] = `
<dd
  className="uu5-bricks-dd my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd content 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</dd>
`;

exports[`UU5.Bricks.Dd content 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</dd>
`;

exports[`UU5.Bricks.Dd content 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</dd>
`;

exports[`UU5.Bricks.Dd content 4`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</dd>
`;

exports[`UU5.Bricks.Dd controlled 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd controlled 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd controlled 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd controlled 4`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd default props 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd disabled 1`] = `
<dd
  className="uu5-bricks-dd uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</dd>
`;

exports[`UU5.Bricks.Dd disabled 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd disabled 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd disabled 4`] = `
<dd
  className="uu5-bricks-dd uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</dd>
`;

exports[`UU5.Bricks.Dd dynamic 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd dynamic 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd dynamic 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd dynamic 4`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd hidden 1`] = `
<dd
  className="uu5-bricks-dd uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd hidden 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd hidden 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd hidden 4`] = `
<dd
  className="uu5-bricks-dd uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd id 1`] = `
<dd
  className="uu5-bricks-dd"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd ignoreHTML 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd ignoreHTML 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd ignoreHTML 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd ignoreHTML 4`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd is inner bricks.dt Bricks.Dt is root to: UU5.Bricks.Dd 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Dt
    className={null}
    content="Dwarf"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Dd
    className={null}
    content="The small man with funny hat"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID03"
    ignoreInnerHTML={false}
    key="uuID03"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Dt
    className={null}
    content="Red Dwarf"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID04"
    ignoreInnerHTML={false}
    key="uuID04"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Dd
    className={null}
    content="Small star, or large space ship from british sitcom."
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID05"
    ignoreInnerHTML={false}
    key="uuID05"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</dl>
`;

exports[`UU5.Bricks.Dd mainAttrs 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd name 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd noIndex 1`] = `
<dd
  className="uu5-bricks-dd uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd noIndex 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd noIndex 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd noIndex 4`] = `
<dd
  className="uu5-bricks-dd uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd selected 1`] = `
<dd
  className="uu5-bricks-dd uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd selected 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd selected 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd selected 4`] = `
<dd
  className="uu5-bricks-dd uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd style 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dd style 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dd style 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dd style 4`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dd textCorrector 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd textCorrector 2`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd textCorrector 3`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd textCorrector 4`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd tooltip 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
